--- a/scss/3.layout/_4.services.scss
+++ b/scss/3.layout/_4.services.scss
@@ -106,6 +106,8 @@
 
     .services-footer {
         display: flex;
+        overflow: hidden;
+        width: 100%;
         justify-content: space-around;
         gap: 100px;
         margin-top: 30px;
